1999-08-15  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* man/amanda.8.in (skip-full, incronly): Document existing bugs.

	* server-src/conffile.c (init_defaults): Default disksize to 0.
	* man/amanda.8.in (holdingdisk use): Document it.
	Reported by Grant Beattie <Grant.Beattie@fulcrum.com.au>

	* server-src/planner.c (setup_estimate): Typo.
	(next_level0): Typo.

	* config/ltconfig, config/ltmain.sh: Update from libtool 1.3.3.

	* example/amanda.conf.in: Clarify holdingdisk::use 0.

	* config/missing: Update from automake 1.4a.

1999-07-04 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amanda.8.in: typo.

1999-06-29  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* man/amrestore.8: Document holding-file usage.

1999-06-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* Makefile.am (pkgdata_DATA): Install COPYRIGHTs.
	(EXTRA_DIST): Remove docs/*.
	* docs/Makefile.am: New file.
	(pkgdata_DATA): Install all docs.
	* configure.in: Output docs/Makefile.
	Suggested by Paul L. Lussier <plussier@baynetworks.com>

	* docs/FAQ (selfcheck time-out): NIS services, inetd rebooting,
	keyboard time-out, lsof.

	* server-src/amverify.sh.in (HEADER): Use `sed 1q'  instead of the
	not-that-portable `head -1'.
	Reported by Andrew Lare <lare@eos913c.gsfc.nasa.gov>

1999-06-20  Thomas Hepper <th@ant.han.de>

	* changer-src/chg-scsi.c: 2 new config keywords, changerident/tapeident
	
	* changer-src/scsi-changer-driver.c: deleted the linux driver at the
	beginning, (wrong window on cut and paste .......)

	* changer-src/scsi-defs.h: new element in Changer_IO which describes
	the type of device which is handled by this entry (tape/robot)

	* changer-src/scsi-changer-driver.c: New parameter to OpenDevice
	to override the selection of the driver for this device. (See
	also docs/TAPE.CHANGERS)

1999-06-19  Alexander Zangerl  <az@Austria.EU.net>

	* client-src/sendbackup-dump.c (re_table): Match Solaris vxdump
	output.

1999-06-18  Thomas Hepper <th@ant.han.de>
